--- a/style.css
+++ b/style.css
@@ -512,7 +512,7 @@ h5 {
 @media screen and (min-width: 700px) {
 	:root {
 		--margin:6vw;
-		--header-height:100px;
+		--header-height:160px;
 	}
 }
 
@@ -565,6 +565,7 @@ img {
 
 figure {
 	margin: 1rem 0;
+	display: inline-block;
 }
 
 figure img {
@@ -716,6 +717,7 @@ input[type="submit"] {
 	background-repeat: no-repeat;
 	background-size: auto 100%;
 	background-attachment: fixed;
+	background-position-x: 20%;
 }
 
 .white {
@@ -805,6 +807,7 @@ input[type="submit"] {
 	background-repeat: no-repeat;
 	background-size: auto 100%;
 	background-attachment: fixed;
+	background-position-x: 50%;
 }
 
 .wheat {
@@ -1042,19 +1045,20 @@ input[type="submit"] {
 	background-color: #1f1f1f;
 }
 
-.home #masthead.slideOut #site-navigation .nav-account svg, .home #masthead.slideOut #search-toggle svg {
-	fill: #1f1f1f;
-}
-
-.home #masthead.slideOut form.search-form .search-submit {
-	filter: invert(0);
+@media screen and (min-width: 1200px) {
+	.home #masthead.slideOut #site-navigation .nav-account svg, .home #masthead.slideOut #search-toggle svg {
+		fill: #1f1f1f;
+	}
+	.home #masthead.slideOut form.search-form .search-submit {
+		filter: invert(0);
+	}
 }
 
 @media screen and (min-width: 700px) {
-	.home #masthead {
+	#masthead {
 		--header-height:160px;
 	}
-	.home #masthead .slideOut {
+	#masthead.slideOut {
 		--header-height:100px;
 	}
 }
@@ -1062,7 +1066,6 @@ input[type="submit"] {
 #masthead svg {
 	fill: #1f1f1f;
 	max-height: var(--header-height);
-	width: fit-content;
 }
 
 .scroll_lock .home #masthead .header-container svg {
@@ -1141,10 +1144,6 @@ header#masthead.slideOut.slideInDown {
 	margin-bottom: 0.5rem;
 }
 
-.main-navigation li:nth-child(1), .main-navigation li:nth-child(2), .main-navigation li:nth-child(3) {
-	font-weight: 700;
-}
-
 .main-navigation a {
 	display: block;
 	text-decoration: none;
@@ -1192,6 +1191,10 @@ header#masthead.slideOut.slideInDown {
 	fill: #EE5A35;
 }
 
+.home #masthead #site-navigation.toggled .nav-account svg, .home #masthead .toggled #search-toggle svg {
+	fill: #EE5A35;
+}
+
 form.search-form {
 	display: flex;
 	height: 50px;
@@ -1206,6 +1209,7 @@ input#search-form {
 	color: #EE5A35;
 	border: 2px solid #EE5A35;
 	padding: 1rem;
+	width: 220px;
 }
 
 input#search-form::placeholder {
@@ -1224,10 +1228,17 @@ button#search-toggle {
 		min-height: unset;
 		padding: 1rem var(--margin) 1rem 1rem;
 		background-color: transparent;
-		width: auto;
+		width: 75%;
 		right: 0;
 		left: unset;
 		z-index: 10;
+		justify-content: flex-end;
+	}
+	.nav-search-form, .nav-account {
+		margin-bottom: 0.5rem;
+	}
+	.nav-search-form a, .nav-account a {
+		line-height: 0;
 	}
 	.main-navigation ul {
 		display: flex;
@@ -1244,6 +1255,9 @@ button#search-toggle {
 	}
 	.home .main-navigation li a::after {
 		background-color: #fff;
+	}
+	.home #masthead.slideOut #site-navigation .nav-account svg, .home #masthead.slideOut #search-toggle svg {
+		fill: #1f1f1f;
 	}
 	.home .slideOut .main-navigation li .current-menu-item a {
 		color: #BE1622;
@@ -1345,8 +1359,9 @@ button#search-toggle {
 #hamburger {
 	position: absolute;
 	right: 1rem;
-	top: 0;
-	height: 33px;
+	top: 50%;
+	transform: translateY(-50%);
+	height: 50px;
 }
 
 .hamburger {
@@ -1381,7 +1396,7 @@ button#search-toggle {
 
 .hamburger-box {
 	width: 40px;
-	height: 30px;
+	height: 40px;
 	display: inline-block;
 	position: relative;
 }
@@ -1422,7 +1437,7 @@ button#search-toggle {
 */
 .hamburger--collapse .hamburger-inner {
 	top: auto;
-	bottom: 0;
+	bottom: 9px;
 	transition-duration: calc(var(--transition) / 2.2);
 	transition-duration: calc(var(--transition) / 2.2);
 	transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
@@ -1440,7 +1455,7 @@ button#search-toggle {
 }
 
 .hamburger--collapse.is-active .hamburger-inner {
-	transform: translate3d(0, -4px, 0) rotate(-30deg);
+	transform: translate3d(0, -9px, 0) rotate(-30deg);
 	transition-duration: calc(var(--transition) / 1.8);
 	transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
 }
@@ -1641,6 +1656,10 @@ div#pb_signup_container .newsletter-inner {
 	margin: 0 0 0.2rem 0;
 	display: block;
 	width: max-content;
+}
+
+.swiper-hero h2.white {
+	color: #1f1f1f;
 }
 
 .swiper-hero .swiper-pagination-bullet {
@@ -1901,6 +1920,11 @@ div#pb_signup_container .newsletter-inner {
 	}
 }
 
+.text_block .block_text {
+	max-width: 680px;
+	margin: 2rem auto;
+}
+
 .whatson_block a {
 	text-decoration: none;
 }
@@ -1920,14 +1944,21 @@ div#pb_signup_container .newsletter-inner {
 
 .whatson_block h4 {
 	color: #E5007D;
+	font-size: 1.2rem;
+	font-weight: 700;
 	margin-bottom: .5rem;
+	transition: color var(--transition) ease;
 }
 
 .whatson_block p.subtitle {
 	margin-bottom: 0.5rem;
 }
 
-.whatson_block_item .decorative {
+.whatson_block_item, .event {
+	width: 100%;
+}
+
+.whatson_block_item .decorative, .event .decorative {
 	position: absolute;
 	bottom: -1rem;
 	left: 50%;
@@ -1977,12 +2008,6 @@ div#pb_signup_container .newsletter-inner {
 	.whatson_block a:hover h4 {
 		color: #2FAC66;
 	}
-	.whatson_block h4 {
-		font-size: 1.2rem;
-		font-weight: 700;
-		margin-bottom: .5rem;
-		transition: color var(--transition) ease;
-	}
 	.whatson_block .right_slash .image_container {
 		clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
 	}
@@ -1992,7 +2017,12 @@ div#pb_signup_container .newsletter-inner {
 	.whatson_single .whatson_block_item .text_container {
 		padding: 4rem 4rem 4rem 3rem;
 		grid-column: 3/4;
+		position: relative;
 	}
+}
+
+.testimonial {
+	position: relative;
 }
 
 .testimonial > div {
@@ -2008,6 +2038,15 @@ div#pb_signup_container .newsletter-inner {
 	font-weight: 600;
 }
 
+.testimonial::after {
+	content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 87 72'%3E%3Cpath data-name='Path 28' d='M0 36v36h36V36H15a21 21 0 0 1 21-21V0A36 36 0 0 0 0 36Zm87-21V0a36 36 0 0 0-36 36v36h36V36H67a21 21 0 0 1 20-21Z' fill='%23fff'/%3E%3C/svg%3E");
+	width: 2rem;
+	height: 2rem;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
 @media screen and (min-width: 700px) {
 	.right_slash .image_container {
 		clip-path: polygon(0 0, 100% 0, 97% 100%, 0 100%);
@@ -2017,6 +2056,9 @@ div#pb_signup_container .newsletter-inner {
 		max-width: clamp(400px, 60vw, 680px);
 		margin: 2rem auto;
 		position: relative;
+	}
+	.testimonial::after {
+		display: none;
 	}
 	.testimonial::before {
 		content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 87 72'%3E%3Cpath data-name='Path 28' d='M0 36v36h36V36H15a21 21 0 0 1 21-21V0A36 36 0 0 0 0 36Zm87-21V0a36 36 0 0 0-36 36v36h36V36H67a21 21 0 0 1 20-21Z' fill='%23e5007d'/%3E%3C/svg%3E");
@@ -2172,7 +2214,8 @@ div#pb_signup_container .newsletter-inner {
 }
 
 .media_block h4 {
-	font-weight: 700;
+	font-weight: 400;
+	font-size: .8rem;
 	text-align: center;
 	margin-top: 2rem;
 }
@@ -2190,6 +2233,7 @@ div#pb_signup_container .newsletter-inner {
 
 .violet .swiper-nav {
 	bottom: -3rem;
+	background-color: #fff;
 }
 
 .violet .swiper-nav::before, .violet .swiper-nav::after {
@@ -2211,6 +2255,14 @@ div#pb_signup_container .newsletter-inner {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+.media_container .iframe_overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 }
 
 @media screen and (min-width: 700px) {
@@ -2429,6 +2481,11 @@ button.filter:hover, button.filter.active {
 	z-index: 5;
 }
 
+.event-archive section#response {
+	margin-bottom: 3rem;
+	padding-bottom: 3rem;
+}
+
 @keyframes loader {
 	0% {
 		clip-path: polygon(0 2%, 75% 0%, 100% 9%, 100% 93%, 25% 100%, 7% 83%);
@@ -2463,6 +2520,9 @@ button.filter:hover, button.filter.active {
 
 .event {
 	margin-bottom: 2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .event .text_container {
@@ -2526,7 +2586,6 @@ button.filter:hover, button.filter.active {
 
 .event.white .decorative {
 	position: absolute;
-	bottom: 0;
 	left: 50%;
 	transform: translate(-50%, 0);
 }
@@ -2664,6 +2723,23 @@ button.filter:hover, button.filter.active {
 	font-weight: 400;
 }
 
+.header_inner.no_image {
+	height: 5rem;
+	background-color: #95C11F;
+}
+
+@media screen and (min-width: 700px) {
+	.header_inner.no_image {
+		height: 8rem;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.header_inner.no_image {
+		height: 15rem;
+	}
+}
+
 .breadcrumbs {
 	border-bottom: 1px solid #707070;
 	padding-bottom: .5rem;
@@ -2759,7 +2835,6 @@ button.filter:hover, button.filter.active {
 .content_gallery.black h2 {
 	color: #FFB501;
 	text-align: center;
-	font-size: 1.2rem;
 }
 
 .content_gallery.black .carousel .swiper-button-next, .content_gallery.black .carousel .swiper-button-prev {
@@ -2767,8 +2842,13 @@ button.filter:hover, button.filter.active {
 	background-color: #fff;
 }
 
+.content_gallery .carousel .swiper-button-next, .content_gallery .carousel .swiper-button-prev {
+	bottom: -3rem;
+}
+
 .content_gallery .swiper-slide p {
 	text-align: center;
+	margin-top: .5rem;
 }
 
 .content_gallery .carousel .swiper-button-next, .content_gallery .carousel .swiper-button-prev {
@@ -2808,6 +2888,7 @@ button.filter:hover, button.filter.active {
 
 .content_blocks .single .whatson_block_item a {
 	color: #1f1f1f;
+	bottom: 1.2rem;
 }
 
 .content_blocks .image_text_block.wild .block_images--large:nth-child(1) {
@@ -2899,6 +2980,10 @@ button.filter:hover, button.filter.active {
 	margin-top: .5rem;
 }
 
+.content_grid--description {
+	max-width: 680px;
+}
+
 .large_button {
 	padding: 2rem;
 	margin: 0 auto;
@@ -2954,6 +3039,9 @@ button.filter:hover, button.filter.active {
 		column-span: all;
 		text-align: center;
 	}
+	.content_info figure {
+		max-width: 100%;
+	}
 }
 
 @media screen and (min-width: 1000px) {
@@ -2991,6 +3079,14 @@ button.filter:hover, button.filter.active {
 		column-count: 2;
 		column-gap: 2rem;
 		margin-bottom: 2rem;
+	}
+	.content_gallery .two_col figure {
+		max-width: 100%;
+	}
+	.content_gallery .one_col {
+		max-width: 680px;
+		margin: 0 auto;
+		text-align: center;
 	}
 	.content_gallery h2 {
 		text-align: center;
@@ -3311,6 +3407,11 @@ article:last-child {
 
 .pagination {
 	grid-column: 1/-1;
+}
+
+/*404*/
+section.content.page_404.margins {
+	margin-bottom: 30vh;
 }
 
 /*--------------------------------------------------------------
