--- a/sass/components/content/_content_blocks.scss
+++ b/sass/components/content/_content_blocks.scss
@@ -116,6 +116,9 @@
 		margin: 0 0 0.2rem 0;
 		display:block;
 		width:max-content;
+		&.white{
+			color:$body;
+		}
 	}
 
 	.swiper-pagination-bullet {
@@ -391,7 +394,12 @@
 		}
 	}
 }
-
+.text_block{
+	.block_text{
+		max-width: 680px;
+		margin:2rem auto;
+	}	
+}
 .whatson_block{
 	a{
 		text-decoration: none;
@@ -410,9 +418,11 @@
 
 	h4{
 		color:$magenta;
-		margin-bottom: .5rem;
+		font-size: 1.2rem;
+		font-weight:700;
+		margin-bottom:.5rem;
+		transition:color var(--transition) ease;
 	}
-
 	p.subtitle {
 		margin-bottom: 0.5rem;
 	}
@@ -420,7 +430,8 @@
 	
 }
 
-.whatson_block_item{
+.whatson_block_item, .event{
+	width: 100%;
 	.decorative {
 		position: absolute;
 		bottom: -1rem;
@@ -438,6 +449,7 @@
     gap: 2rem;
 	margin-bottom:2rem;
 }
+
 
 @include media700{
 	.whatson_grid .whatson_block_item {
@@ -480,12 +492,7 @@
 				color:$green;
 			}
 		}
-		h4 {
-			font-size: 1.2rem;
-			font-weight:700;
-			margin-bottom:.5rem;
-			transition:color var(--transition) ease;
-		}
+		
 		.right_slash .image_container {
 			clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
 		}
@@ -497,6 +504,7 @@
 			.text_container {
 				padding: 4rem 4rem 4rem 3rem;
 				grid-column: 3/4;
+				position:relative;
 			}
 		}
 	}
@@ -504,6 +512,7 @@
 }
 
 .testimonial{
+	position: relative;
 	&>div {
     	width: 100%;
     	padding: 2rem;
@@ -514,6 +523,14 @@
 
 	h3{
 		font-weight:600;
+	}
+	&::after {
+		content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 87 72'%3E%3Cpath data-name='Path 28' d='M0 36v36h36V36H15a21 21 0 0 1 21-21V0A36 36 0 0 0 0 36Zm87-21V0a36 36 0 0 0-36 36v36h36V36H67a21 21 0 0 1 20-21Z' fill='%23fff'/%3E%3C/svg%3E");
+		width: 2rem;
+		height: 2rem;
+		position: absolute;
+		left: 0;
+		top: 0;
 	}
 
 }
@@ -529,15 +546,17 @@
 		max-width: clamp(400px,60vw,680px);
 		margin: 2rem auto;
 		position: relative;
-	}
-	
-	.testimonial::before {
-		content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 87 72'%3E%3Cpath data-name='Path 28' d='M0 36v36h36V36H15a21 21 0 0 1 21-21V0A36 36 0 0 0 0 36Zm87-21V0a36 36 0 0 0-36 36v36h36V36H67a21 21 0 0 1 20-21Z' fill='%23e5007d'/%3E%3C/svg%3E");
-		width: 3rem;
-		height: 3rem;
-		position: absolute;
-		left: -4rem;
-		top: 0;
+		&::after{
+			display:none;
+		}
+		&::before {
+			content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 87 72'%3E%3Cpath data-name='Path 28' d='M0 36v36h36V36H15a21 21 0 0 1 21-21V0A36 36 0 0 0 0 36Zm87-21V0a36 36 0 0 0-36 36v36h36V36H67a21 21 0 0 1 20-21Z' fill='%23e5007d'/%3E%3C/svg%3E");
+			width: 3rem;
+			height: 3rem;
+			position: absolute;
+			left: -4rem;
+			top: 0;
+		}
 	}
 }
 
@@ -682,7 +701,8 @@
 
 .media_block{
 	h4{
-		font-weight:700;
+		font-weight:400;
+		font-size:.8rem;
 		text-align: center;
 		margin-top:2rem;
 	}
@@ -698,6 +718,7 @@
 }
 .violet .swiper-nav{
 	bottom:-3rem;
+	background-color: $white;
 	&::before, &::after{
 		background-color: $violet;
 	}
@@ -706,6 +727,13 @@
 	@include proportional-container(56.25%);
 	iframe{
 		@include proportional-image;
+	}
+	.iframe_overlay{
+		position:absolute;
+		width:100%;
+		height:100%;
+		top:0;
+		left:0;
 	}
 }
 
@@ -931,6 +959,10 @@ button.filter {
 	}
 }
 
+.event-archive section#response {
+	margin-bottom: 3rem;
+	padding-bottom: 3rem;
+}
 
 @keyframes loader {
 	0%{
@@ -965,6 +997,9 @@ button.filter {
 }
 .event{
 	margin-bottom:2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	.text_container{
 		padding:1rem 2rem 2rem;
 	}
@@ -1019,7 +1054,6 @@ button.filter {
 
 .event.white .decorative {
     position: absolute;
-    bottom: 0;
     left: 50%;
     transform: translate(-50%, 0);
 }
@@ -1162,6 +1196,24 @@ button.filter {
 	}
 }
 
+.header_inner.no_image {
+	height: 5rem;
+	background-color: $lime;
+}
+@media screen and (min-width:700px){
+	.header_inner.no_image {
+		height: 8rem;
+	}
+}
+
+@media screen and (min-width:1200px){
+	.header_inner.no_image {
+		height: 15rem;
+	}
+}
+
+
+
 .breadcrumbs {
     border-bottom: 1px solid #707070;
     padding-bottom: .5rem;
@@ -1252,16 +1304,19 @@ button.filter {
 		h2 {
 			color: $yellow;
 			text-align: center;
-			font-size: 1.2rem;
 		}
 		.carousel .swiper-button-next, .carousel .swiper-button-prev{
 			color:$body;
 			background-color:$white;
 		}
 	}
+	.carousel .swiper-button-next, .carousel .swiper-button-prev{
+		bottom: -3rem;
+	}
 	.swiper-slide{
 		p {
 			text-align: center;
+			margin-top:.5rem;
 		}
 	}
 	.carousel .swiper-button-next, .carousel .swiper-button-prev{
@@ -1298,6 +1353,7 @@ button.filter {
 		}
 		a{
 			color:$body;
+			bottom: 1.2rem;
 		}
 	}
 	.image_text_block.wild .block_images--large:nth-child(1){
@@ -1381,7 +1437,9 @@ button.filter {
 		margin-top:.5rem;
 	}
 }
-
+.content_grid--description{
+	max-width:680px;
+}
 .large_button {
     padding: 2rem;
     margin: 0 auto;
@@ -1446,6 +1504,9 @@ button.filter {
 			column-span: all;
 			text-align: center;
 		}
+		figure{
+			max-width: 100%;
+		}
 	}
 
 }
@@ -1491,6 +1552,14 @@ button.filter {
 			column-count: 2;
 			column-gap: 2rem;
 			margin-bottom: 2rem;
+			figure{
+				max-width: 100%;
+			}
+		}
+		.one_col {
+			max-width: 680px;
+			margin: 0 auto;
+			text-align: center;
 		}
 		h2 {
 			text-align: center;
@@ -1801,4 +1870,9 @@ article:last-child {
 
 .pagination{
 	grid-column:1/-1;
+}
+
+/*404*/
+section.content.page_404.margins {
+	margin-bottom: 30vh;
 }
