--- a/sass/utilities/_alignments.scss
+++ b/sass/utilities/_alignments.scss
@@ -1,7 +1,7 @@
 .alignleft {
 
 	/*rtl:ignore*/
-	float: left;
+	//float: left;
 
 	/*rtl:ignore*/
 	margin-right: 1.5em;
@@ -11,7 +11,7 @@
 .alignright {
 
 	/*rtl:ignore*/
-	float: right;
+	//float: right;
 
 	/*rtl:ignore*/
 	margin-left: 1.5em;
